<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">no content</string>
    <string name="app_name">rawphone</string>
    <string name="strength">Signal strength</string>
    <string name="quit">Quit</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>

    <string name="device_info_title">Device Information</string>
    <string name="oemrilhook_title">OEM RIL Hook</string>

    <string name="text_no_busybox">Busybox was not detected on your device, would you like to install it now?</string>
    <string name="text_busybox_not_installed">Busybox install failed, please confirm your phone has been rooted and su
        binary installed.
    </string>
    <string name="text_no_microcom">The Microcom applet was not detected on your device, would you like to install it
        now?
    </string>
    <string name="text_no_atinout">The ATinout applet was not detected on your device, would you like to install it
        now?
    </string>
    <string name="gprs"># GPRS</string>
    <string name="edge"># EDGE</string>
    <string name="umts"># UMTS</string>
    <string name="hsdpa"># HSDPA</string>
    <string name="hsupa"># HSUPA</string>
    <string name="hspa"># HSPA</string>
    <string name="cdma"># CDMA</string>
    <string name="evo0"># EVO-0</string>
    <string name="evoA"># EVO-A</string>

    <!--For RIL OEM HOOK testing-->
    <string name="testing_RIL_OEMHook">RIL OEM Hook Test</string>
    <string name="ril_oem_choose">Choose a RIL OEM Hook API to test:</string>
    <string name="radio_api1">API 1 (datalen=0)</string>
    <string name="radio_api2">API 2 (datalen=1)</string>
    <string name="radio_api3">API 3 (datalen=6)</string>
    <string name="radio_api4">API 4 Type command :</string>
    <string name="radio_api5">API 5 Ciphering Indicator</string>
    <string name="radio_run">RUN</string>
    <string name="ril_oem_response">Module response:</string>
</resources>
