<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <TextView android:id="@+id/mylabel"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/ril_oem_choose"
            />
    <RadioGroup android:id="@+id/radio_group_api"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <RadioButton android:id="@+id/radio_api1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/radio_api1"
                />
        <RadioButton android:id="@+id/radio_api2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/radio_api2"
                />
        <RadioButton android:id="@+id/radio_api3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/radio_api3"
                />
        <RadioButton android:id="@+id/radio_api5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/radio_api5"
                />
        <RadioButton android:id="@+id/radio_api4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/radio_api4"
                />
    </RadioGroup>
    <EditText
            android:id="@+id/edit_cmdstr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            android:minWidth="200dip"
            android:textColor="#000000"
            android:background="@android:drawable/editbox_background"
            android:inputType="text"/>
    <Button android:id="@+id/run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_run"
            android:clickable="true"/>
    <TextView android:id="@+id/label_response"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/ril_oem_response"
            />
    <EditText
            android:id="@+id/edit_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="200dip"
            android:minHeight="50dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            android:background="#000000"
            android:editable="false"
            android:inputType="text"/>
    <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/displayList"
            />
</LinearLayout>
